deployment/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: diner.test
    http:
      paths:
        - path: /controller
          pathType: Prefix
          backend:
            service:
              name: controller
              port:
                number: 8000
  - host: diner.test
    http:
      paths:
        - path: /server
          pathType: Prefix
          backend:
            service:
              name: server
              port:
                number: 4000
